--- a/OneSwitch/res/layout/seek_bar_preference.xml
+++ b/OneSwitch/res/layout/seek_bar_preference.xml
@@ -5,7 +5,7 @@
     android:paddingBottom="5dp"
     android:paddingLeft="15dp"
     android:paddingRight="10dp"
-    android:paddingTop="5dp" >
+    android:paddingTop="5dp">
 
     <TextView
         android:id="@+id/seekBarPrefUnitsRight"
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toLeftOf="@id/seekBarPrefUnitsRight"
-        android:gravity="right" >
+        android:gravity="end" >
     </TextView>
 
     <TextView
